# VulkanIndirectEngine

./: CMakeLists.txt  LIBRARIES  LICENSE  Main.cpp
Data/: settings.xml
engine/: VIEModel.hpp  VIERunException.hpp  VIESettings.cpp  VIESettings.hpp  VIEStatus.hpp  VIEUberShader.hpp  VIEngine.cpp  VIEngine.hpp  VIEngineStatus.hpp
include/engine/: VIESettings.hpp  VIEStatus.hpp  VIEUberShader.hpp  VIEngine.hpp
include/structs/: VIEMesh.hpp  VIEModel.hpp  VIEScene.hpp  VIEVertex.hpp
include/structs/transform/: VIERotation.hpp  VIEScale.hpp  VIETransform.hpp  VIETranslation.hpp
include/tools/: VIETools.hpp
lib/translat_o_matic/include/: LanguageResource.hpp
shaders/debug/: shader.vert
shaders/uber/: shader.frag  shader.vert
src/engine/: VIESettings.cpp  VIEngine.cpp
src/structs/: VIEModel.cpp  VIEScene.cpp
src/tools/: VIETools.cpp
system/: Settings.hpp
test/: Main.cpp
test/Data/: settings.xml
test/xml/: XMLHandler.cpp  XMLHandler.hpp
xml/: XMLHandler.cpp  XMLHandler.hpp
